@@ -1,3 +1,6 @@
+Changes since 0.3.0:
+- The chat and console history are now remembered between restarts of arma
+
 Changes since 0.3.0_alpha4941:
 - Added setting to toggle custom teamnames
 - New team menu item: autoselect team mode
